--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,45 +3,19 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "name": "청운중학교 총합 알리미",
-  "short_name": "청운중학교 총합 알리미",
+  "name": "청운중학교 통합 알리미",
+  "short_name": "청운중학교 통합 알리미",
   "description": "\ub098\ub9cc\uc758 \uc791\uc740 \uc77c\uae30",
   "icons": [
     {
-      "src": "/android-icon-36x36.png",
-      "sizes": "36x36",
-      "type": "image/png",
-      "density": "0.75"
-    },
-    {
-      "src": "/android-icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "density": "1.0"
-    },
-    {
-      "src": "/android-icon-72x72.png",
+      "src": "/icons/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "density": "1.5"
+      "type": "image/png"
     },
     {
-      "src": "/android-icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "density": "2.0"
-    },
-    {
-      "src": "/android-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "density": "3.0"
-    },
-    {
-      "src": "/android-icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "density": "4.0"
+      "src": "/icons/apple-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
     }
   ]
 }
